--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
   },
   "homepage": "https://github.com/Col-R/mern_shop#readme",
   "dependencies": {
+    "axios": "^0.27.2",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
-    "mongoose": "^6.3.3"
+    "mongoose": "^6.3.3",
+    "redux-devtools-extension": "^2.13.9"
   },
   "devDependencies": {
     "concurrently": "^7.2.0",
